
2001-01-15  Ales Hvezda  <ahvezda@geda.seul.org>

	* src/s_cpinlist.c: Fixed core dumper when pin doesn't have
	  the required pin#=# attributed. (Pointed out by Matt, fixed by
	  Stefan)

2000-12-22  Ales Hvezda  <ahvezda@geda.seul.org>

	* scheme/gnet-vams.scm: Fixed a minor bug which was uncovered by
	  Stefan's stricter error checking in g_netlist.c

2000-12-14  Ales Hvezda  <ahvezda@geda.seul.org>

	* tests/*: removed some tests since they put version information
	  into the files which caues the tests to fail.

	* tests/*: Added some more very simple tests (using singlenet_1.sch)

2000-12-17  Stefan Petersen  <spe@geda.seul.org>

	* src/gnetlist.c: Changed the repl to Guile built in one. Better
	  error handling, work like Guile and so on.

	* src/g_netlist.c, src/vams_misc.c: Added inparameter check on all 
	  Guile routines (SCM_ASSERT(...)).
	
2000-12-14  Ales Hvezda  <ahvezda@geda.seul.org>

	* examples/vams/gschemrc: Added one line suggested by Stefan to get
	  the keymapping stuff working 100% with keymap redefinition.

2000-12-13  Ales Hvezda  <ahvezda@geda.seul.org>

	* configure.in: Added -lregex for CYGWIN32 build

2000-12-12  Ales Hvezda  <ahvezda@geda.seul.org>

	* scheme/gnet-vams.scm: Finally found the time to finish getting this
	  backend working with guile 1.4 (using the fixes Eduard provided)

2000-12-07  Ales Hvezda  <ahvezda@geda.seul.org>

	* src/s_project.c: Removed obsolete DONT_REDRAW var from code

2000-12-03  Ales Hvezda  <ahvezda@geda.seul.org>

	* configure.in: Slightly rearranged things to make cygwin port happy

2000-12-02  Ales Hvezda  <ahvezda@geda.seul.org>

        * src/gnetlist.c: Changed Cygwin warning message

	* src/g_rc.c: Updated an #if to work with the current cygwin

2000-11-30  Ales Hvezda  <ahvezda@geda.seul.org>

        * configure.in: Added -fnative-struct flag for CYGWIN port only

        * configure.in: Added --enable-debug flag to enable -g flag

2000-11-16  Ales Hvezda  <ahvezda@geda.seul.org>
